--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,2 @@
 # Override for the router dependency.
-paths = ["/home/berthold_alheit/Dropbox/redusa/deps/router/"]
+#paths = ["/home/berthold_alheit/Dropbox/redusa/deps/router/"]
