--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,42 +9,15 @@ authors = ["Beho Alheit <behoalheit@gmail.com>"]
 name = "redusa"
 path = "src/main.rs"
 
-[dependencies.iron]
 
-git = "https://github.com/iron/iron.git"
-
-[dependencies.urlencoded]
-
-git = "https://github.com/iron/urlencoded.git"
-
-[dependencies.logger]
-
-git = "https://github.com/iron/logger.git"
-
-[dependencies.router]
-
-git = "https://github.com/iron/router.git"
-
-#[dependencies.mount]
-#
-#git = "https://github.com/iron/mount.git"
-
-#[dependencies.persistent]
-#
-#git = "https://github.com/iron/persistent.git"
-
-#[dependencies.staticfile]
-#
-#git = "https://github.com/iron/static-file.git"
-
-#[dependencies.session]
-#
-#git = "https://github.com/iron/session.git"
-
-#[dependencies.cookie]
-#
-#git = "https://github.com/iron/cookie.git"
-
-[dependencies.bodyparser]
-
-git = "https://github.com/iron/body-parser.git"
+[dependencies]
+iron = "0.6.0"
+time = "0.1.39"
+urlencoded = "0.6.0"
+env_logger = "*"
+logger = "0.4.0"
+router = "0.6.0"
+persistent = "*"
+bodyparser = "0.8.0" 
+serde = "1.0.27"
+serde_derive = "1.0.9"
