Add tests for API.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,13 @@ path = "src/main.rs"
 iron = "0.6.0"
 time = "0.1.39"
 urlencoded = "0.6.0"
+iron-test = "*"
+mime = "*"
 env_logger = "*"
 logger = "0.4.0"
 router = "0.6.0"
 persistent = "*"
 bodyparser = "0.8.0" 
 serde = "1.0.27"
+serde_json = "1.0.9"
 serde_derive = "1.0.9"
